Change page title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
-        <title>Journey</title>
+        <title>Sketches | Isaac Mason</title>
     </head>
     <body>
         <div id="root"></div>
