feat: add sidebar menu with cover images

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
             rel="stylesheet"
         />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+        />
 
         <title>Sketches | Isaac Mason</title>
     </head>
