feat: google analytics

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         />
 
         <title>Sketches | Isaac Mason</title>
+
+        <%- analyticsScript %>
     </head>
     <body>
         <div id="root"></div>
