feat: add description meta

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         />
 
         <title>Sketches | Isaac Mason</title>
+        <meta name="description" content="A collection of three.js sketches exploring web graphics, physics, ai, interaction, and more.">
 
         <%- analyticsScript %>
     </head>
