--- a/sketches/character-animation/mixamo-animations/index.html
+++ b/sketches/character-animation/mixamo-animations/index.html
@@ -19,7 +19,7 @@
 
     <body>
         <div id="root"></div>
-        <script type="module" src="/src/index.sketch.tsx"></script>
+        <script type="module" src="/src/main.tsx"></script>
     </body>
 
     <style>
@@ -28,8 +28,6 @@
             width: 100%;
             height: 100vh;
             background: #222;
-        }
-        * {
             font-family: 'Poppins', sans-serif;
             color: #fff;
         }
