--- a/sketches/procedural-generation/caves/src/index.html
+++ b/sketches/procedural-generation/caves/src/index.html
@@ -14,11 +14,14 @@
             margin: 0;
             padding: 0;
             background: #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         canvas {
-            width: 100vw;
             height: 100vh;
             object-fit: cover;
+            image-rendering: pixelated;
         }
         .controls {
             position: fixed;
