feat: minor caves and dungeon procgen sketch changes

--- a/sketches/procedural-generation/bsp-dungeon/src/index.html
+++ b/sketches/procedural-generation/bsp-dungeon/src/index.html
@@ -39,6 +39,7 @@
             font-family: monospace;
             opacity: 0.4;
             background: rgba(0, 0, 0, 0.5);
+            border: 1px solid #fff;
             color: #fff;
         }
         #controls:hover {
