--- a/sketches/procedural-generation/caves/src/index.html
+++ b/sketches/procedural-generation/caves/src/index.html
@@ -34,6 +34,7 @@
             flex-direction: column;
             font-family: monospace;
             background: #0005;
+            border: 1px solid #fff;
             color: #fff;
         }
         .controls .control label {
