chore: bump dev dependencies

--- a/sketches/procedural-generation/bsp-dungeon/src/index.html
+++ b/sketches/procedural-generation/bsp-dungeon/src/index.html
@@ -34,6 +34,7 @@
             padding: 1em;
             gap: 1em;
             width: 20em;
+            max-width: 20em;
             display: flex;
             flex-direction: column;
             font-family: monospace;
